@@ -10,7 +10,7 @@
 <!-- start header info -->
 <TABLE WIDTH=100% BORDER=0 CELLSPACING=0 CELLPADDING=0 BGCOLOR=#FFFFFF>
 <TR>
-<TD><FONT SIZE=+3><B>tkcon Documentation</B> (May 2001)</FONT></TD>
+<TD><FONT SIZE=+3><B>tkcon Documentation</B> (June 2001)</FONT></TD>
 <TD align=right>
 <A href="http://tkcon.sourceforge.net/"> 
 <IMG src="http://sourceforge.net/sflogo.php?group_id=11462&type=1" width="88"
@@ -40,7 +40,9 @@ height="31" border="0" alt="SourceForge Logo"></A>
 </TD></TR><TR><TD BGCOLOR=#FFFFFF>
 <DIV CLASS="indent">
 
+<!--
 <H4><A HREF="ftp://tkcon.sourceforge.net/pub/tkcon/">Release Archives</A> (ftp)</H4>
+-->
 
 <H4><A
 HREF="http://sourceforge.net/project/showfiles.php?group_id=11462">Release
