@@ -12,7 +12,7 @@
 <TR>
 <TD><FONT SIZE=+3><B>Enhanced Tk Console: tkcon</B></FONT></TD>
 <TD align=right>
-<A href="http://tkcon.sourceforge.net/"> 
+<A href="http://sourceforge.net/projects/tkcon/"> 
 <IMG src="http://sourceforge.net/sflogo.php?group_id=11462&type=1" width="88"
 height="31" border="0" alt="SourceForge Logo"></A>
 </TD>
@@ -34,17 +34,19 @@ height="31" border="0" alt="SourceForge Logo"></A>
 </TR><TR>
 
 <TD COLSPAN=4>
-<A HREF="ftp://tkcon.sourceforge.net/pub/tkcon/"><B>Release Archives</B>
-(ftp)</A><BR><A
+<!-- <A HREF="ftp://tkcon.sourceforge.net/pub/tkcon/"><B>Release Archives</B>
+(ftp)</A><BR> -->
+<A
 HREF="http://sourceforge.net/project/showfiles.php?group_id=11462"><B>Release
 Archives</B> (high speed server)</A>
 
 <P>
-<B><PRE STYLE="color: #990033;">Last full release (v2.1, May 4 2001):
-149133 May  4 15:58 <A HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tkcon/tkcon/tkcon.tcl?rev=1.28&content-type=application/x-tcl">tkcon.tcl</A></PRE></B>
+<B><CODE STYLE="color: #990033;">Last full release (v2.2, June 20 2001):
+<A HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tkcon/tkcon/tkcon.tcl?rev=1.36&content-type=application/x-tcl">tkcon.tcl</A></CODE></B>
 </P>
 <P>
-You can grab the latest sources from the
+You can grab the <A
+HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/tkcon/tkcon/tkcon.tcl?rev=HEAD">latest sources</A> from the
 <A HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/tkcon/tkcon/"><B>tkcon CVS repository</B></A>
 (currently post v2.1).
 </P>
